# fffio

./: .gitignore  Build.md  LICENSE  README.md  pyproject.toml
examples/: frame_reader_sample.py  frame_writer_sample.py
src/fffio/: __init__.py  frame_reader.py  frame_writer.py
